<resources>
    <string name="app_name" translatable="true">Transak_Infield</string>
    <string-array name="markItems" translatable="true">

        <item>pending</item>
        <item>approved </item>
        <item>cancel</item>
    </string-array>
    <string name="navigation_drawer_open" translatable="false">Open Navigation Drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close Navigation Drawer</string>
    <string name="nav_home" translatable="false">Home</string>
    <string name="nav_profile" translatable="false">Profile</string>
    <string name="nav_settings" translatable="false">Settings</string>
    <string name="nav_help" translatable="false">Help</string>
    <string name="nav_about" translatable="false">About Us</string>
    <string name="nav_share" translatable="false">Share</string>
    <string name="nav_shot" translatable="false">Shot</string>
    <string name="support" translatable="false">Support</string>
    <string name="nav_logout" translatable="false">Logout</string>
    <string name="mail">infieldengineeringltd@gmail.com</string>
    <string name="create" translatable="false">create</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="cancellation" translatable="false">Cancel</string>
    <string name="pending" translatable="false">Pending</string>
    <string name="name" translatable="false">Lilact Tearz</string>
    <string name="printDoc" translatable="false">Download Estimate</string>
    <string name="printInvoice" translatable="false">Download Invoice</string>
    <string name="previewInvoice" translatable="false">Preview Invoice</string>
    <string name="previewEstimate" translatable="false">Preview Estimate</string>
    <string name="addItems" translatable="false">Insert Item</string>
    <string name="Validity" translatable="false">VALIDITY</string>
    <string name="vat" translatable="false">VAT</string>
    <string name="ex_vat" translatable="false">EX-VAT</string>
    <string name="ent_itemName" translatable="false">Item Description</string>
    <string name="ent_quantity" translatable="false">Quantity</string>
    <string name="ent_price" translatable="false">Price</string>
    <string name="ent_clientName" translatable="false">Client Name</string>
    <string name="in_invoice" translatable="false">Invoice</string>
    <string name="in_Archives" translatable="false">Archives</string>
    <string name="in_estimate" translatable="false">Estimate</string>
    <string name="in_response" translatable="false">Response</string>
    <string name="in_receipt" translatable="false">Receipts</string>
    <string name="in_hello" translatable="false">Hello</string>
    <string name="in_infielder" translatable="false">Infielder</string>
    <string name="in_upload" translatable="false">Upload</string>
    <string-array name="Date2">

        <item>Validity </item>
        <item translatable="false">7 days </item>
        <item translatable="false">14 days </item>
        <item>30 days</item>

    </string-array>
    <string-array name="Bankdetail">
        <item>Infield Ac: </item>
        <item>Person Ac: </item>

    </string-array>
    <string-array name="Vat">
        <item>16%:</item>
        <item>Non Vat: </item>

    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="due_on">Due on</string>
    <string name="creation_date">Creation date</string>
    <string name="bussiness_information">Bussiness Information</string>
    <string name="client_info">Client info :</string>
    <string name="items_list">Items List:</string>
    <string name="sub_total">Sub-total</string>
    <string name="ksh_0_00">KSH:0.00</string>
    <string name="total">Total</string>
    <string name="esumTotal_ksh_0_00">KSH:0.00</string>
    <string name="invoice_info">Invoice info</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="creation_date_time">Creation Date</string>
    <string name="invoice_title">Invoice Title</string>
    <string name="client_name">Client Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="add_item">Add item</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="item_price">Item Price</string>
    <string name="tax_rate">Tax Rate %</string>
    <string name="amount">AMOUNT</string>
    <string name="add_itemAmountscreen">KSH:0.00</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_estimate_landing_actvity">EstimateLandingActvity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_transform">Document Transforms</string>
    <string name="menu_reflow">Estimates</string>
    <string name="menu_slideshow">Backup</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_aboutuz">About us</string>
    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="preview">Preview</string>
    <string name="download">Download</string>
    <string name="add_item_to_list">Add item to list</string>
    <string name="sample_string_text">Sample string text</string>
    <string name="save">Save</string>
    <string name="upload_ai">Upload Ai</string>
    <string name="delivery_note">Delivery note</string>
    <string name="nav_add_items">Add items</string>
</resources>