<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item android:title="@string/nav_home"
            android:id="@+id/nav_home"
            android:icon="@drawable/home">
         </item>

        <item android:title="@string/nav_settings"
            android:id="@+id/nav_settings"
            android:icon="@drawable/setting">
        </item>

        <item android:title="@string/nav_share"
            android:id="@+id/nav_share"
            android:icon="@drawable/share">
        </item>

        <item android:title="@string/nav_about"
            android:id="@+id/nav_about"
            android:icon="@drawable/about">
        </item>


    </group>

    <item
        android:title="">
        <menu>
            <item
                android:title="@string/nav_logout"
                android:id="@id/nav_logout"
                android:icon="@drawable/logout">

            </item>
        </menu>

    </item>

</menu>